<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="6dip">
    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:singleLine="true"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:text="@string/rating"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/userComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment2"
        android:layout_below="@+id/rating"
        android:ellipsize="marquee"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userComment"
        android:text="@string/major"
        android:textSize="15sp"
        android:textColor="@color/black"/>
</RelativeLayout>