<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/tech"
    android:scaleType = "fitStart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:layout_centerInParent="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controllers.OpeningScreenActivity"
    tools:showIn="@layout/activity_opening_screen">

    <TextView
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/welcomtobuzz"
        android:singleLine="false"
        android:id="@+id/textView" />

    <LinearLayout
        android:paddingTop="100dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:id="@+id/button"
        android:textColor="@color/dark_gray"
        android:layout_marginTop="13.333dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onLoginButtonClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:id="@+id/button3"
        android:textColor="@color/dark_gray"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/button"
        android:layout_marginTop="26.667dp"
        android:onClick="onRegisterButtonClicked" />
    </LinearLayout>
</RelativeLayout>
