<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.datapp.buzz_movieselector.controllers.RatingActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2">

        <AutoCompleteTextView
            android:id="@+id/userComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ratingcolon"
        android:id="@+id/textView6"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp" />

    <Spinner
        android:id="@+id/ratingSpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/profile_update_button"
        android:layout_alignStart="@+id/profile_update_button"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="15dp"
        android:layout_marginStart="-30dp"
        android:layout_marginLeft="-30dp" />

    <Button
        android:id="@+id/profile_update_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/Post"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        android:onClick="onSubmitPress"
        android:layout_below="@+id/ratingSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

</RelativeLayout>
